Started to build user authentication

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,16 +17,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".LoginFirebase"
-            android:label="@string/title_activity_login_firebase"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".UserDatabase"></activity>
+        <activity android:name=".UserRegisterActivity" />
+        <activity android:name=".UserLoginActivity" />
         <activity android:name=".MainActivity" />
 
         <service android:name=".MediaPlayerService" />
