--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UserDatabase"></activity>
+        <activity android:name=".GoogleUserUsername"></activity>
+        <activity android:name=".UserInformationActivity" />
+        <activity android:name=".UserProfile" />
+        <activity android:name=".Utilities" />
+        <activity android:name=".UserDatabase" />
         <activity android:name=".UserRegisterActivity" />
         <activity android:name=".UserLoginActivity" />
         <activity android:name=".MainActivity" />
