--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginFirebase"></activity>
+        <activity android:name=".SetSilentPhone"></activity>
+        <activity android:name=".LoginFirebase" />
         <activity
             android:name=".PlayLists"
             android:label="@string/title_activity_play_lists"
