Modifications and fixing bugs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <permission android:name="android.permission.Media_CONTENT_CONTROL" />
+    <permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
 
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -17,26 +17,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginFirebase"></activity>
-        <activity
-            android:name=".PlayLists"
-            android:label="@string/title_activity_play_lists"
-            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MainActivity" />
 
         <service android:name=".MediaPlayerService" />
 
         <activity android:name=".MediaActivity" />
         <activity android:name=".OfflineActivity" />
-        <activity android:name=".GoogleUserUsername" />
-        <activity android:name=".UserDatabase" />
-        <activity android:name=".UserInformationActivity" />
-        <activity android:name=".UserProfile" />
-        <activity android:name=".Utilities" />
-        <activity android:name=".UserRegisterActivity" />
+
         <activity
             android:name=".OfflineActivityTry"
             android:label="@string/title_activity_offline_try"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".PlayLists"
+            android:label="@string/title_activity_play_lists"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Pedometer"
@@ -45,6 +39,10 @@
         <activity
             android:name=".TrackPedo"
             android:label="@string/title_activity_track_pedo"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".LoginFirebase"
+            android:label="@string/title_activity_login_firebase"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -52,6 +50,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SetSilentPhone"></activity>
     </application>
 
 </manifest>
